--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             <!-- Secciones -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item d-none d-md-block">
-                    <a class="nav-link text-white" href="#">Sobre mi <span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-white" href="#about">Sobre mi <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Mi Experiencia</a>
+                    <a class="nav-link text-white" href="#experience">Mi Experiencia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Mis Últimos Trabajos</a>
+                    <a class="nav-link text-white" href="#works">Mis Últimos Trabajos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Contacto</a>
+                    <a class="nav-link text-white" href="#contact">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -50,7 +50,7 @@
         </div>
     </div>
     <!-- Sobre mi -->
-    <div class="container text-center d-none d-md-block">
+    <div class="container text-center d-none d-md-block" id="about">
         <p class="font-weight-bold my-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <div class="row">
             <div class="col-12 col-md-6"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis distinctio deleniti, rerum velit perferendis ipsum! Assumenda, debitis dolore! Et porro optio amet nulla assumenda consectetur ratione quasi sit, quae suscipit.</p></div>
@@ -58,7 +58,7 @@
         </div>
     </div>    
     <!-- Experiencia -->
-    <div class="container text-center">
+    <div class="container text-center" id="experience">
         <h3 class="text-center font-weight-bold my-5">MI EXPERIENCIA</h3>
         <div class="row">
             <div class="col-12 col-md-6">
@@ -74,7 +74,7 @@
         </div>
     </div>
     <!-- Últimos Trabajos -->
-    <div class="container-fluid text-center bg-dark text-white px-5 pt-4">
+    <div class="container-fluid text-center bg-dark text-white px-5 pt-4" id="works">
         <div class="container">
             <h3 class="font-weight-bold">MIS ÚLTIMOS TRABAJOS</h3>
             <div class="row text-dark row-cols-1 row-cols-md-2 row-cols-lg-3">
@@ -140,7 +140,7 @@
         </div>
     </div>
     <!-- Contacto Formulario -->
-    <div class="container text-center">
+    <div class="container text-center" id="contact">
         <h3 class="font-weight-bold mt-5">CONTACTO</h3>
         <div class="typeform-widget" data-url="https://form.typeform.com/to/ef7ynC7T" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=ef7ynC7T&utm_source=typeform.com-01EFX35GAHTDXMN2YAC7T32ABG-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
     </div>
