--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     
     <!-- Scripts-->
-    <script src="assets/jquery/jscripts.js"></script>
+    <script src="assets\jquery\jscripts.js"></script>
 </body>
 </html>
