Cambios en Header - Aún hay que arreglar cosas

--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
         </div>
     </nav>   
     <!-- Header -->
-    <div class="container mt-5 pt-5 text-center">
+    <div class="container mt-5 pt-5 text-center border-bottom">
         <div class="hero-section">
-            <h1>YO SOY</h1>
-            <h1 class="font-weight-bold border-top">GIANCARLO</h1>
+            <p class="border-bottom text-dark">PORTAFOLIO</p>
+            <h1 class="font-weight-bold">Giancarlo</h1>
+            <h1 class="font-weight-bold">Noseda</h1>
+
         </div>
     </div>
     <!-- Sobre mi -->
