--- a/index.html
+++ b/index.html
@@ -43,17 +43,18 @@
         </div>
     </nav>   
     <!-- Header -->
-    <div class="container mt-5 pt-5 text-center border-bottom">
+    <div class="container mt-5 pt-5 pb-5 text-center border-bottom">
         <div class="hero-section">
-            <p class="border-bottom text-dark">PORTAFOLIO</p>
-            <h1 class="font-weight-bold">Giancarlo</h1>
-            <h1 class="font-weight-bold">Noseda</h1>
-
+            <u><p class="text-dark display-5 mb-0">PORTAFOLIO</p></u>
+            <div class="container"  data-trigger="hover" data-container="body" data-toggle="popover" data-placement="right" data-content="Este es mi nombre, no lo gasten">
+                <h1 class="font-weight-bold">Giancarlo</h1>
+                <h1 class="font-weight-bold">Noseda</h1>
+            </div>
         </div>
     </div>
     <!-- Sobre mi -->
     <div class="container text-center d-none d-md-block" id="about">
-        <p class="font-weight-bold my-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <h3 class="font-weight-bold my-5 titulo">BUSCO TÍTULO PARA ESTA SECCIÓN</h3>
         <div class="row">
             <div class="col-12 col-md-6"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis distinctio deleniti, rerum velit perferendis ipsum! Assumenda, debitis dolore! Et porro optio amet nulla assumenda consectetur ratione quasi sit, quae suscipit.</p></div>
             <div class="col-12 col-md-6"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus eligendi, architecto commodi quaerat id delectus reprehenderit sapiente, voluptates numquam minus assumenda unde nisi itaque asperiores, mollitia consectetur ad neque rerum.</p></div>
@@ -61,24 +62,46 @@
     </div>    
     <!-- Experiencia -->
     <div class="container text-center" id="experience">
-        <h3 class="text-center font-weight-bold my-5">MI EXPERIENCIA</h3>
+        <h3 class="text-center font-weight-bold my-5 titulo">MI EXPERIENCIA</h3>
         <div class="row">
             <div class="col-12 col-md-6">
-                <i class="fab fa-empire display-1"></i>
-                <p>Stormtrooper</p>
+                <div class="col-12"><i class="fab fa-empire display-1"></i></div>
+                <button type="button" class="btn  btn-outline-dark btn-sm mt-2 mb-3" data-toggle="modal" data-target="#kinder">Stormtrooper</button>
                 <p>1991 - 2017</p>
             </div>
             <div class="col-12 col-md-6">
                 <i class="fas fa-cannabis display-1"></i>
-                <p>Piranha Growshop</p>
+                <p class="mt-3">Piranha Growshop</p>
                 <p>2017 - 2020</p>
             </div>
         </div>
     </div>
+
+    <!-- Modal  Fade-->
+    <div class="modal fade text-center" id="kinder" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title text-center" id="exampleModalLabel">Primer dia del Kinder Imperial</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <img class="img-fluid mb-3" src="assets/img/Kinder.jpg" alt="KinderImperial">
+  
+              <p>La formación de un Stormtrooper empieza a muy temprana edad, no es facil preparar a todo un ejercito para que falle el 95% de sus disparos</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- Últimos Trabajos -->
     <div class="container-fluid text-center bg-dark text-white px-5 pt-4" id="works">
         <div class="container">
-            <h3 class="font-weight-bold">MIS ÚLTIMOS TRABAJOS</h3>
+            <h3 class="font-weight-bold titulo">MIS ÚLTIMOS TRABAJOS</h3>
             <div class="row text-dark row-cols-1 row-cols-md-2 row-cols-lg-3">
                 
                 <div class="col-12 col-md-6 col-lg-4 my-4">
@@ -143,14 +166,14 @@
     </div>
     <!-- Contacto Formulario -->
     <div class="container text-center" id="contact">
-        <h3 class="font-weight-bold mt-5">CONTACTO</h3>
+        <h3 class="font-weight-bold mt-5 titulo">CONTACTO</h3>
         <div class="typeform-widget" data-url="https://form.typeform.com/to/ef7ynC7T" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=ef7ynC7T&utm_source=typeform.com-01EFX35GAHTDXMN2YAC7T32ABG-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
     </div>
     <!-- Footer con logos -->
     <footer class="bg-dark text-white py-5">
         <div class="container text-center foot">
             <div class="row">
-                <h3 class="col-12 col-md-6 my-3">Giancarlo</h3>
+                <h3 class="col-12 col-md-6 my-3 display-4 font-weight-bold">Gianca</h3>
                 <div class="col-12 col-md-6 my-3">
                     <a href="https://github.com"><i class="fab fa-github-square fa-4x mx-1"></i></a>
                     <a href="https://github.com"><i class="fab fa-linkedin fa-4x mx-1"></i></a>
