Solo faltan retoques para la entrega

--- a/index.html
+++ b/index.html
@@ -175,10 +175,11 @@
             <div class="row">
                 <h3 class="col-12 col-md-6 my-3 display-4 font-weight-bold">Gianca</h3>
                 <div class="col-12 col-md-6 my-3">
-                    <a href="https://github.com"><i class="fab fa-github-square fa-4x mx-1"></i></a>
-                    <a href="https://github.com"><i class="fab fa-linkedin fa-4x mx-1"></i></a>
-                    <a href="https://github.com"><i class="fab fa-twitter-square fa-4x mx-1"></i></a>
+                    <a href="https://github.com/GNoseda"><i class="fab fa-github-square fa-4x mx-1"></i></a>
+                    <a href="https://cl.linkedin.com/public-profile/in/giancarlo-noseda-18183533?challengeId=AQEBTc5R-6lNJQAAAXQo-fIh-yaU6zT_fWlATbZ92f31CTWH4QrUbE8Qp7ovLEQIwSX3fXYAHgMytASvYMVDKIRuqPth_W5dEw&submissionId=30f3b1d1-3fb6-2e16-4e52-00965e846c09" target="_blank"><i class="fab fa-linkedin fa-4x mx-1"></i></a>
+                    <!-- <a href="https://github.com"><i class="fab fa-twitter-square fa-4x mx-1"></i></a>
                     <a href="https://github.com"><i class="fab fa-facebook-square fa-4x mx-1"></i></a>
+                    -->
                 </div>
             </div>     
         </div>
