--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </nav>   
     <!-- Header -->
-    <div class="container mt-5 pt-5 pb-5 text-center border-bottom">
+    <section class="container mt-5 pt-5 pb-5 text-center border-bottom">
         <div class="hero-section">
             <u><p class="text-dark display-5 mb-0">PORTAFOLIO</p></u>
             <div class="container"  data-trigger="hover" data-container="body" data-toggle="popover" data-placement="right" data-content="Este es mi nombre, no lo gasten">
@@ -51,7 +51,7 @@
                 <h1 class="font-weight-bold">Noseda</h1>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Sobre mi -->
     <div class="container text-center d-none d-md-block" id="about">
         <h3 class="font-weight-bold my-5 titulo">BUSCO TÍTULO PARA ESTA SECCIÓN</h3>
@@ -90,7 +90,7 @@
             <div class="modal-body">
               <img class="img-fluid mb-3" src="assets/img/Kinder.jpg" alt="KinderImperial">
   
-              
+
               <p>La formación de un Stormtrooper empieza a muy temprana edad, no es facil preparar a todo un ejercito para que falle el 95% de sus disparos</p>
             </div>
             <div class="modal-footer">
